created MultiplayerGame and GamesHandler